[workspace]
members = [
	"2015/day01/a",
	"2015/day01/b",
	"2015/day02/a",
	"2015/day02/b",
	"2015/day03/a",
	"2015/day03/b",
	"2015/day04/a",
	"2015/day04/b",
	"2015/day05/a",
	"2015/day05/b",
	"2015/day06/a",
	"2015/day06/b",
	"2015/day07/a",
	"2015/day07/b",
	"2015/day08/a",
	"2015/day08/b",
	"2022/day01/a",
	"2022/day01/b",
	"2022/day02/a",
	"2022/day02/b"
]

